slower animation and icon spacing fix

--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -77,10 +77,13 @@ body,
   letter-spacing: 0.2em;
 }
 
+.hero h2 {
+  font-size: 1.5rem;
+}
+
 .hero,
 .heroText {
   opacity: 0;
-  font-size: 2.5rem;
   /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
   animation: fadeIn ease-in 1;
   -moz-animation: fadeIn ease-in 1; /* Firefox */
@@ -129,27 +132,33 @@ body,
   }
 }
 
-.heroText.fadeInOne {
+.heroText.fadeInHeader {
   -webkit-animation-delay: 0.2s;
   -moz-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
 
+.heroText.fadeInOne {
+  -webkit-animation-delay: 1s;
+  -moz-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
 .heroText.fadeInTwo {
-  -webkit-animation-delay: 0.4s;
-  -moz-animation-delay: 0.4s;
-  animation-delay: 0.4s;
+  -webkit-animation-delay: 1.2s;
+  -moz-animation-delay: 1.2s;
+  animation-delay: 1.2s;
 }
 
 .heroText.fadeInThree {
-  -webkit-animation-delay: 0.6s;
-  -moz-animation-delay: 0.6s;
-  animation-delay: 0.6s;
+  -webkit-animation-delay: 1.4s;
+  -moz-animation-delay: 1.4s;
+  animation-delay: 1.4s;
 }
 .heroText.fadeInFour {
-  -webkit-animation-delay: 0.8s;
-  -moz-animation-delay: 0.8s;
-  animation-delay: 0.8s;
+  -webkit-animation-delay: 1.6s;
+  -moz-animation-delay: 1.6s;
+  animation-delay: 1.6s;
 }
 
 .bulletPointList {
